@@ -1,4 +1,5 @@
 2012-07-29
+ * -o flag for rts2-scriptexec, report scriptexec progress
  * filter_id (integer) used as index instead of filter name
 
 2012-07-09
